[package]
name = "ziggurat-node"
version = "0.1.0"
description = "Ziggurat node (Babel testnet)"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/noirhq/noir.git"
publish = false

[[bin]]
name = "ziggurat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6" }
color-print = "0.3"
const-hex = "1.12"
docify = "0.2"
futures = "0.3"
jsonrpsee = { version = "0.24", features = ["server"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cosmos-rpc = { git = "https://github.com/noirhq/noir", branch = "fallback-eth_getCode" }
cosmos-runtime-api = { git = "https://github.com/noirhq/noir", branch = "fallback-eth_getCode" }
cosmwasm-rpc = { git = "https://github.com/noirhq/noir", branch = "fallback-eth_getCode" }
cosmwasm-runtime-api = { git = "https://github.com/noirhq/noir", branch = "fallback-eth_getCode" }
frame-babel = { git = "https://github.com/noirhq/noir", branch = "fallback-eth_getCode" }
ziggurat-runtime = { path = "../runtime" }

fc-api = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode" }
fc-db = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode" }
fc-mapping-sync = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode", features = ["sql"] }
fc-rpc = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode", features = ["rpc-binary-search-estimate", "txpool"] }
fc-rpc-core = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode" }
fp-rpc = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode" }
pallet-ethereum = { git = "https://github.com/noirhq/frontier", branch = "fallback-eth_getCode" }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

[build-dependencies]
docify = "0.2"
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"ziggurat-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
	"ziggurat-runtime/try-runtime",
]
